add BE book loans impl
